--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -128,7 +128,7 @@ s=q\cdot s_{v}+(1-q)\cdot s_{L}
 </div>
 <div class="math">
 \begin{equation*}
-\left(\frac{\partial q}{\partial T}\right)_{v}=-\left(\frac{\partial T}{\partial v}\right)_{q}\cdot\left(\frac{\partial v}{\partial q}\right)_{T}=\frac{\left(\frac{\partial v}{\partial q}\right)_{T}}{\left(\frac{\partial v}{\partial T}\right)_{q}}
+\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{1}{\left(\frac{\partial T}{\partial v}\right)_{q}\cdot\left(\frac{\partial v}{\partial q}\right)_{T}}=-\frac{\left(\frac{\partial v}{\partial T}\right)_{q}}{\left(\frac{\partial v}{\partial q}\right)_{T}}
 \end{equation*}
 </div>
 <div class="math">
@@ -143,7 +143,7 @@ s=q\cdot s_{v}+(1-q)\cdot s_{L}
 </div>
 <div class="math">
 \begin{equation*}
-\left(\frac{\partial q}{\partial T}\right)_{v}=\frac{v_{v}-v_{L}}{q\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, L}}=\frac{\frac{1}{\rho_{v}}-\frac{1}{\rho_{L}}}{-q\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, V}+\left(q-1\right)\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, L}} (2)
+\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{q\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, L}}{v_{v}-v_{L}}=\frac{q\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, L}}{\frac{1}{\rho_{v}}-\frac{1}{\rho_{L}}} (2)
 \end{equation*}
 </div>
 <div class="math">
