Added isochores and isotherms to doc
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -69,7 +69,7 @@ for properties under ceratain conditions (e.g. at a low temperature). Thus, bett
 <h3>3.1.1.&nbsp;&nbsp;&nbsp;Isentrops</h3>
 <ol class="arabic simple">
 <li>Start from a seed poing <span class="math">\(f_0\)</span></li>
-<li>Compute the fluid state based on <em>s</em> and <em>T</em> variables</li>
+<li>Compute the fluid state based on <span class="math">\(s\)</span> and <span class="math">\(T\)</span> variables</li>
 <li>Find <span class="math">\(\left(\frac{\partial\rho}{\partial T}\right)_{s}\)</span></li>
 </ol>
 <p class="align-center">From Maxwell's relation, we have</p>
@@ -157,6 +157,15 @@ s=q\cdot s_{v}+(1-q)\cdot s_{L}
 <li>Compute the fluid state at <span class="math">\(f_1\)</span> by <span class="math">\(T_0 + \Delta T\)</span> and <span class="math">\(\rho_0 + \Delta\rho\)</span></li>
 <li>Go back to 3. using <span class="math">\(f_1\)</span></li>
 </ol>
+</div>
+<div class="section" id="isochores">
+<h3>3.1.2.&nbsp;&nbsp;&nbsp;Isochores</h3>
+<p>Determine the appropriate ranges for <span class="math">\(T\)</span> and <span class="math">\(\rho\)</span> and
+compute the fluid state based on those variables</p>
+</div>
+<div class="section" id="isotherms">
+<h3>3.1.3.&nbsp;&nbsp;&nbsp;Isotherms</h3>
+<p>Same as in the case of isochores</p>
 </div>
 </div>
 </div>
