Temporary work on State diagrams.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -70,9 +70,9 @@ for properties under ceratain conditions (e.g. at a low temperature). Thus, bett
 <ol class="arabic simple">
 <li>Start from a seed poing <span class="math">\(f_0\)</span></li>
 <li>Compute the fluid state based on <span class="math">\(s\)</span> and <span class="math">\(T\)</span> variables</li>
-<li>Find <span class="math">\(\left(\frac{\partial\rho}{\partial T}\right)_{s}\)</span></li>
+<li>Find <span class="math">\(\left(\frac{\partial\rho}{\partial T}\right)_{s}\)</span>
+From Maxwell's relation, we have</li>
 </ol>
-<p class="align-center">From Maxwell's relation, we have</p>
 <div class="math">
 \begin{equation*}
 \left(\frac{\partial v}{\partial T}\right)_{s}=-\left(\frac{\partial s}{\partial p}\right)_{v}
@@ -98,7 +98,12 @@ ds=\left(\frac{\partial s}{\partial v}\right)_{T}\cdot dv+\left(\frac{\partial s
 \left(\frac{\partial\rho}{\partial T}\right)_{s}=\frac{1}{v^{2}}\cdot\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
 \end{equation*}
 </div>
-<p class="align-center">For the two-phase region,</p>
+<div class="math">
+\begin{equation*}
+
+For the two-phase region,
+\end{equation*}
+</div>
 <div class="math">
 \begin{equation*}
 \Delta s=\left(\frac{\partial s}{\partial q}\right)_{T}\Delta q+\left(\frac{\partial s}{\partial T}\right)_{q}\Delta T
