Modification of the FluidProperty calculator documentation. Started moving functions from CoolProp cython to C++.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -70,87 +70,7 @@ for properties under ceratain conditions (e.g. at a low temperature). Thus, bett
 <ol class="arabic simple">
 <li>Start from a seed poing <span class="math">\(f_0\)</span></li>
 <li>Compute the fluid state based on <span class="math">\(s\)</span> and <span class="math">\(T\)</span> variables</li>
-<li>Find <span class="math">\(\left(\frac{\partial\rho}{\partial T}\right)_{s}\)</span>
-From Maxwell's relation, we have</li>
-</ol>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial v}{\partial T}\right)_{s}=-\left(\frac{\partial s}{\partial p}\right)_{v}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-ds=\left(\frac{\partial s}{\partial v}\right)_{T}\cdot dv+\left(\frac{\partial s}{\partial T}\right)_{v}\cdot dT
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial s}{\partial p}\right)_{v}=\left(\frac{\partial s}{\partial v}\right)_{T}\cdot\left(\frac{\partial v}{\partial p}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial v}{\partial T}\right)_{s}=-\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial\rho}{\partial T}\right)_{s}=\frac{1}{v^{2}}\cdot\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-
-For the two-phase region,
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\Delta s=\left(\frac{\partial s}{\partial q}\right)_{T}\Delta q+\left(\frac{\partial s}{\partial T}\right)_{q}\Delta T
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial s}{\partial T}\right)_{v}=\left(\frac{\partial s}{\partial q}\right)_{T}\cdot\left(\frac{\partial q}{\partial T}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{q}\cdot\left(\frac{\partial T}{\partial T}\right)_{v}=\left(\frac{\partial s}{\partial q}\right)_{T}\cdot\left(\frac{\partial q}{\partial T}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{q}
-\end{equation*}
-</div>
-<p class="align-center">Let's find the components of this formula:</p>
-<div class="math">
-\begin{equation*}
-s=q\cdot s_{v}+(1-q)\cdot s_{L}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial s}{\partial q}\right)_{T}=s_{v}-s_{L} (1)
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{1}{\left(\frac{\partial T}{\partial v}\right)_{q}\cdot\left(\frac{\partial v}{\partial q}\right)_{T}}=-\frac{\left(\frac{\partial v}{\partial T}\right)_{q}}{\left(\frac{\partial v}{\partial q}\right)_{T}}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial v}{\partial q}\right)_{T}=v_{v}-v_{L}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial V}{\partial T}\right)_{q}=q\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, L}
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{q\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{sat\, L}}{v_{v}-v_{L}}=\frac{q\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\rho^{2}\left(\frac{\partial\rho}{\partial T}\right)_{sat\, L}}{\frac{1}{\rho_{v}}-\frac{1}{\rho_{L}}} (2)
-\end{equation*}
-</div>
-<div class="math">
-\begin{equation*}
-\left(\frac{\partial s}{\partial T}\right)_{q}=q\cdot\left(\frac{\partial s}{\partial T}\right)_{sat\, V}+\left(1-q\right)\cdot\left(\frac{\partial s}{\partial T}\right)_{sat\, L} (3)
-\end{equation*}
-</div>
-<ol class="arabic simple" start="4">
+<li>Find <span class="math">\(\left(\frac{\partial\rho}{\partial T}\right)_{s}\)</span>.</li>
 <li>Select a step <span class="math">\(\Delta T\)</span> and find <span class="math">\(\Delta \rho\)</span> from</li>
 </ol>
 <div class="math">
@@ -162,6 +82,102 @@ s=q\cdot s_{v}+(1-q)\cdot s_{L}
 <li>Compute the fluid state at <span class="math">\(f_1\)</span> by <span class="math">\(T_0 + \Delta T\)</span> and <span class="math">\(\rho_0 + \Delta\rho\)</span></li>
 <li>Go back to 3. using <span class="math">\(f_1\)</span></li>
 </ol>
+<p>We use Maxwell relations to find the derivative:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial v}{\partial T}\right)_{s}=-\left(\frac{\partial s}{\partial p}\right)_{v}
+\end{equation*}
+</div>
+<p>Which can be expressed as:</p>
+<div class="math" id="eq-pfx">
+\begin{equation*}
+\left(\frac{\partial\rho}{\partial T}\right)_{s}=\rho^2\cdot\left(\frac{\partial s}{\partial p}\right)_{v}
+\end{equation*}
+</div>
+<p>Using the total derivative of <span class="math">\(s\)</span>:</p>
+<div class="math">
+\begin{equation*}
+\mathrm{d}s=\left(\frac{\partial s}{\partial v}\right)_{T}\cdot \mathrm{d}v+\left(\frac{\partial s}{\partial T}\right)_{v}\cdot \mathrm{d}T
+\end{equation*}
+</div>
+<p>And taking the partial derivative:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial p}\right)_{v}=\left(\frac{\partial s}{\partial v}\right)_{T}\cdot\left(\frac{\partial v}{\partial p}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial p}\right)_{v}=\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
+\end{equation*}
+</div>
+<p>Finally:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial \rho}{\partial T}\right)_{s}=\rho^2\left(\frac{\partial s}{\partial T}\right)_{v}\cdot\left(\frac{\partial T}{\partial p}\right)_{v}
+\end{equation*}
+</div>
+<p>In the single phase region the two partial derivatives on the right can be calculated directly. In the two-phase region, we can use:</p>
+<div class="math">
+\begin{equation*}
+s=q\cdot s_{V}+(1-q)\cdot s_{L}
+\end{equation*}
+</div>
+<p>And therefore the total <span class="math">\(s\)</span> derivative can be expressed as:</p>
+<div class="math">
+\begin{equation*}
+\partial s=\left(\frac{\partial s}{\partial q}\right)_{T}\mathrm{d}q+\left(\frac{\partial s}{\partial T}\right)_{q}\mathrm{d}T
+\end{equation*}
+</div>
+<p>Taking the partial derivative:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial T}\right)_{v}=\left(\frac{\partial s}{\partial q}\right)_{T}\cdot\left(\frac{\partial q}{\partial T}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{q}\cdot\left(\frac{\partial T}{\partial T}\right)_{v}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial T}\right)_{v}=\left(\frac{\partial s}{\partial q}\right)_{T}\cdot\left(\frac{\partial q}{\partial T}\right)_{v}+\left(\frac{\partial s}{\partial T}\right)_{q}
+\end{equation*}
+</div>
+<p>The terms can be expressed as follows:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial q}\right)_{T}=s_{V}-s_{L}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{\left(\frac{\partial v}{\partial T}\right)_{q}}{\left(\frac{\partial v}{\partial q}\right)_{T}}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial s}{\partial T}\right)_{q}=q\cdot\left(\frac{\partial s}{\partial T}\right)_{SatV}+\left(1-q\right)\cdot\left(\frac{\partial s}{\partial T}\right)_{SatL}
+\end{equation*}
+</div>
+<p>The right-hand side of the second equation contains two terms, which can be expressed as follows:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial v}{\partial T}\right)_{q}=q\cdot\left(\frac{\partial v}{\partial T}\right)_{SatV}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{SatL}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial v}{\partial q}\right)_{T}=v_{V}-v_{L}
+\end{equation*}
+</div>
+<p>Therefore we have:</p>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial q}{\partial T}\right)_{v}=-\frac{q\cdot\left(\frac{\partial v}{\partial T}\right)_{SatV}+\left(1-q\right)\cdot\left(\frac{\partial v}{\partial T}\right)_{SatL}}{v_{v}-v_{L}}
+\end{equation*}
+</div>
+<div class="math">
+\begin{equation*}
+\left(\frac{\partial q}{\partial T}\right)_{v}=\frac{\frac{q}{\rho^{2}}\left(\frac{\partial\rho}{\partial T}\right)_{SatV}+\frac{1-q}{\rho^{2}}\left(\frac{\partial\rho}{\partial T}\right)_{SatL}}{\frac{1}{\rho_{v}}-\frac{1}{\rho_{L}}}
+\end{equation*}
+</div>
 </div>
 <div class="section" id="isochores">
 <h3>3.1.2.&nbsp;&nbsp;&nbsp;Isochores</h3>
