--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -90,7 +90,7 @@
 	          </ul>
 	          <div style="position: fixed; bottom: 10px;">
 	          	<div><a href="http://www.sysmoltd.com/?q=contact">Contact us</a></div>
-	          	<div><span class="text-muted">&copy; </span><a href="http://www.sysmoltd.com">Sysmo Ltd.</a></div>
+	          	<div><span class="text-muted">&copy; </span><a href="http://www.sysmoltd.com">SysMo Ltd.</a></div>
 	          </div>
 	        </div>
 			<div style="margin-left: 180px;">
