--- a/SmoWebBase/templates/SmoWebBase/Base.jinja
+++ b/SmoWebBase/templates/SmoWebBase/Base.jinja
@@ -1,9 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+	<title>SmoWeb - The computational platform</title>
 	<link rel="stylesheet" href="{{ static('css/bootstrap.min.css') }}"> 
 	<link rel="stylesheet" href="{{ static('css/Base.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ static('css/SmoInputOutputView.css') }}">
+	
+	<link rel="icon" href="{{ static('img/favicon.ico') }}" type="image/x-icon">
     
     <!-- polyfill for min/max-width CSS3 Media Queries (for IE 6-8, and more) -->
     <script src="{{ static('js/respond.js') }}"></script>
