Fixed dropdown menu
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -150,6 +150,9 @@ blockquote {
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
 }
 
+.open .dropdown-menu {
+    border: none;
+}
 
 .dropdown-menu > li > a {
     display: block;
