--- a/BioReactors/templates/BioReactors/restblocks/html/SimpleChemostatDoc.html
+++ b/BioReactors/templates/BioReactors/restblocks/html/SimpleChemostatDoc.html
@@ -28,8 +28,8 @@ X' = -DX + \mu(S)X
 <p><span class="math">\(S(t)\)</span> - concentration of nutrient (substrate) [mass/volume]</p>
 <p><span class="math">\(X(t)\)</span> - concentration of culture (microorganisms) [mass/volume]</p>
 <p><span class="math">\(S_{in}\)</span> - concentration of the input nutrient (substrate) [mass/volume]</p>
-<p><span class="math">\(\gamma\)</span> - yield coefficient of microorganisms (<span class="math">\(\gamma &lt;= 1\)</span>) [-]</p>
 <p><span class="math">\(D\)</span> - dilution (or washout) flow rate [1/time]</p>
+<p><span class="math">\(\gamma\)</span> - yield coefficient of microorganisms (<span class="math">\(\gamma \leq 1\)</span>) [-]</p>
 <p><span class="math">\(\mu(S) = \frac{m.S}{K+S}\)</span> - specific growth rate (Monod type)</p>
 <p><span class="math">\(m\)</span> - maximal growth rate [1/time]</p>
 <p><span class="math">\(K\)</span> - half saturation constant [mass/volume]</p>
