--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -213,7 +213,7 @@
 	color: black;
 }
 /* Record array and TableView editor */
-.record-array, .table-view-edit {
+.record-array, .table-view-edit, .view-edit {
 	position: absolute;
 	position: fixed;
 	left: 0px;
