*Added fix for IE due to inability of pagination in longer google tables, disabling pagination. *Improved edit mode in tables, plots, record-arrays
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/SmoInputOutputView.css
+++ b/SmoWebBase/static/css/SmoInputOutputView.css
@@ -213,7 +213,7 @@
 	color: black;
 }
 /* Record array and TableView editor */
-.record-array, .table-view-edit, .view-edit {
+.record-array, .view-edit {
 	position: absolute;
 	position: fixed;
 	left: 0px;
@@ -239,9 +239,10 @@
 }
 
 /* Internet Explorer specific styles */
-.no-rgba .record-array, .no-rgba .table-view-edit, .no-rgba .view-edit {
+.no-rgba .record-array, .no-rgba .view-edit {
 	background: black;
 }
+
 
 
 
