Edited Chemostat documentation
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/BioReactors/templates/BioReactors/restblocks/html/SimpleChemostatDoc.html
+++ b/BioReactors/templates/BioReactors/restblocks/html/SimpleChemostatDoc.html
@@ -7,13 +7,13 @@ The rate of medium flow is controlled to keep the culture volume constant.</p>
 </div>
 <div class="section" id="chemostat">
 <h1>1.&nbsp;&nbsp;&nbsp;Chemostat</h1>
-<p>A chemostat (from Chemical environment is static) is a bioreactor to which fresh medium is continuously added,
+<p>A chemostat (from &quot;Chemical environment is static&quot;) is a bioreactor to which fresh medium is continuously added,
 while culture liquid is continuously removed to keep the culture volume constant. By changing the rate
-with which medium is added to the bioreactor the growth rate of the microorganism can be easily controlled <a class="citation-reference" href="#wiki-chemostat" id="id1">[Wiki-Chemostat]</a>.</p>
+at which medium is added to the bioreactor the growth rate of the microorganism can be easily controlled <a class="citation-reference" href="#wiki-chemostat" id="id1">[Wiki-Chemostat]</a>.</p>
 </div>
 <div class="section" id="mathematical-model">
 <h1>2.&nbsp;&nbsp;&nbsp;Mathematical model</h1>
-<p>The mathematical model of simple chemostat is <a class="citation-reference" href="#chemostat-95" id="id2">[Chemostat:95]</a>:</p>
+<p>The mathematical model of a simple chemostat is <a class="citation-reference" href="#chemostat95" id="id2">[Chemostat95]</a>:</p>
 <div class="math">
 \begin{equation*}
 S' = (S_{in} - S)D - \frac{1}{\gamma}\mu(S)X
@@ -42,13 +42,10 @@ X' = -DX + \mu(S)X
 <tr><td class="label"><a class="fn-backref" href="#id1">[Wiki-Chemostat]</a></td><td><a class="reference external" href="http://en.wikipedia.org/wiki/Chemostat" target="_self">http://en.wikipedia.org/wiki/Chemostat</a></td></tr>
 </tbody>
 </table>
-<table class="docutils citation" frame="void" id="chemostat-95" rules="none">
+<table class="docutils citation" frame="void" id="chemostat95" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
-<tr><td class="label"><a class="fn-backref" href="#id2">[Chemostat:95]</a></td><td><ol class="first last upperalpha simple" start="8">
-<li>Smith and P. Waltman. The Theory of the Chemostat: Dynamics of Microbial Competition. Cambridge University Press, 1995</li>
-</ol>
-</td></tr>
+<tr><td class="label"><a class="fn-backref" href="#id2">[Chemostat95]</a></td><td>Smith, H. and Waltman, P. The Theory of the Chemostat: Dynamics of Microbial Competition. Cambridge University Press, 1995</td></tr>
 </tbody>
 </table>
 </div>
